alignment fixes

--- a/style.sass
+++ b/style.sass
@@ -56,11 +56,12 @@ body
         opacity: 0
         transform: translateY(-8rem)
 
-.inventory-history
+.inventory-history p
     position: absolute
-    p
-        position: absolute
-        animation: fade-up 1000ms ease-out forwards
+    animation: fade-up 1000ms ease-out forwards
+    text-align: center
+    color: beige
+    pointer-events: none
 
 .item
     border: 1px solid red
